# toolrip

./: .gitignore  404.html  CLAUDE.md  SETUP-GUIDE.md  _headers  _worker.js  ads.txt  index.html  manifest.json  package.json  pnpm-lock.yaml  robots.txt  services.json  sitemap.xml  tsconfig.base.json  turbo.json
.claude/: launch.json  settings.local.json
agents/: definitions.py  main.py  pyproject.toml
agents/prompts/: backend.py  designer.py  frontend.py  orchestrator.py  pm.py  qa.py
agents/utils/: artifacts.py  config.py  logger.py
agents/workflows/: batch_create.py  create_service.py  deploy_service.py
blog/: apr-vs-apy-explained.html  base64-encoding-explained.html  best-finance-calculators.html  calorie-deficit-explained.html  color-theory-for-developers.html  cron-expression-tutorial.html  essential-developer-tools.html  free-security-tools.html  health-fitness-calculators.html  how-compound-interest-works.html  index.html  inflation-and-your-money.html  json-guide.html  json-parser-performance.html  loan-amortization-schedule-guide.html  mortgage-guide-first-time-buyers.html  mortgage-myths-i-hear-from-first-time-buyers.html  password-security-guide.html  regex-guide-for-beginners.html  running-pace-training-guide.html  sleep-science-guide.html  the-one-password-mistake-i-see-everywhere.html  understanding-bmi.html  unit-conversion-guide.html  web-accessibility-colors.html  what-is-jwt.html  why-i-stopped-trusting-bmi.html
legal/: about.html  author-david-park.html  author-elena-ruiz.html  author-marcus-chen.html  author-sarah-williams.html  faq.html  (+6 more)
(+121 files in other folders)
